--- a/Inferential_statistics_exercise_3.ipynb
+++ b/Inferential_statistics_exercise_3.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "source": [
     "## B\n",
-    "#### Does hospital discharge size predict Excess readmission ratio? does anything else? sklearn.feature_selection.f_regression??"
+    "#### Does hospital discharge size predict Excess readmission ratio? does anything else?
    ]
   },
   {
