--- a/Inferential_statistics_exercise.ipynb
+++ b/Inferential_statistics_exercise.ipynb
@@ -34,7 +34,7 @@
     "    <ul>\n",
     "    <li> Would you use a one-sample or two-sample test? Why?\n",
     "    <li> In this situation, is it appropriate to use the $t$ or $z$ statistic? \n",
-    "    <li> Now try using the other test. How is the result be different? Why?\n",
+    "    <li> Now try using the other test. How is the result be different? Why?",
     "    </ul>\n",
     "<li>  Draw a small sample of size 10 from the data and repeat both tests. \n",
     "    <ul>\n",
